src/test/ui/associated-type-bounds/inside-adt.stderr
error: associated type bounds are not allowed within structs, enums, or unions
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
  --> $DIR/inside-adt.rs:8:29
   |
LL | struct S1 { f: dyn Iterator<Item: Copy> }
   |                             ^^^^^^^^^^

error: associated type bounds are not allowed within structs, enums, or unions
  --> $DIR/inside-adt.rs:11:33
   |
LL | struct S2 { f: Box<dyn Iterator<Item: Copy>> }
   |                                 ^^^^^^^^^^

error: associated type bounds are not allowed within structs, enums, or unions
  --> $DIR/inside-adt.rs:14:29
   |
LL | struct S3 { f: dyn Iterator<Item: 'static> }
   |                             ^^^^^^^^^^^^^

error: associated type bounds are not allowed within structs, enums, or unions
  --> $DIR/inside-adt.rs:18:26
   |
LL | enum E1 { V(dyn Iterator<Item: Copy>) }
   |                          ^^^^^^^^^^

error: associated type bounds are not allowed within structs, enums, or unions
  --> $DIR/inside-adt.rs:21:30
   |
LL | enum E2 { V(Box<dyn Iterator<Item: Copy>>) }
   |                              ^^^^^^^^^^

error: associated type bounds are not allowed within structs, enums, or unions
  --> $DIR/inside-adt.rs:24:26
   |
LL | enum E3 { V(dyn Iterator<Item: 'static>) }
   |                          ^^^^^^^^^^^^^

error: associated type bounds are not allowed within structs, enums, or unions
  --> $DIR/inside-adt.rs:28:28
   |
LL | union U1 { f: dyn Iterator<Item: Copy> }
   |                            ^^^^^^^^^^

error: associated type bounds are not allowed within structs, enums, or unions
  --> $DIR/inside-adt.rs:31:32
   |
LL | union U2 { f: Box<dyn Iterator<Item: Copy>> }
   |                                ^^^^^^^^^^

error: associated type bounds are not allowed within structs, enums, or unions
  --> $DIR/inside-adt.rs:34:28
   |
LL | union U3 { f: dyn Iterator<Item: 'static> }
   |                            ^^^^^^^^^^^^^

error[E0601]: `main` function not found in crate `inside_adt`
   |
   = note: consider adding a `main` function to `$DIR/inside-adt.rs`

error: could not find defining uses

error: could not find defining uses

error: could not find defining uses

error: could not find defining uses

error: could not find defining uses

error: could not find defining uses

error: could not find defining uses

error: could not find defining uses

error: could not find defining uses

error: aborting due to 19 previous errors

For more information about this error, try `rustc --explain E0601`.
=======
  --> $DIR/inside-adt.rs:5:29
   |
LL | struct S1 { f: dyn Iterator<Item: Copy> }
   |                             ^^^^^^^^^^

error: associated type bounds are not allowed within structs, enums, or unions
  --> $DIR/inside-adt.rs:8:33
   |
LL | struct S2 { f: Box<dyn Iterator<Item: Copy>> }
   |                                 ^^^^^^^^^^

error: associated type bounds are not allowed within structs, enums, or unions
  --> $DIR/inside-adt.rs:11:29
   |
LL | struct S3 { f: dyn Iterator<Item: 'static> }
   |                             ^^^^^^^^^^^^^

error: associated type bounds are not allowed within structs, enums, or unions
  --> $DIR/inside-adt.rs:15:26
   |
LL | enum E1 { V(dyn Iterator<Item: Copy>) }
   |                          ^^^^^^^^^^

error: associated type bounds are not allowed within structs, enums, or unions
  --> $DIR/inside-adt.rs:18:30
   |
LL | enum E2 { V(Box<dyn Iterator<Item: Copy>>) }
   |                              ^^^^^^^^^^

error: associated type bounds are not allowed within structs, enums, or unions
  --> $DIR/inside-adt.rs:21:26
   |
LL | enum E3 { V(dyn Iterator<Item: 'static>) }
   |                          ^^^^^^^^^^^^^

error: associated type bounds are not allowed within structs, enums, or unions
  --> $DIR/inside-adt.rs:25:28
   |
LL | union U1 { f: dyn Iterator<Item: Copy> }
   |                            ^^^^^^^^^^

error: associated type bounds are not allowed within structs, enums, or unions
  --> $DIR/inside-adt.rs:28:32
   |
LL | union U2 { f: Box<dyn Iterator<Item: Copy>> }
   |                                ^^^^^^^^^^

error: associated type bounds are not allowed within structs, enums, or unions
  --> $DIR/inside-adt.rs:31:28
   |
LL | union U3 { f: dyn Iterator<Item: 'static> }
   |                            ^^^^^^^^^^^^^

error: could not find defining uses
  --> $DIR/inside-adt.rs:5:29
   |
LL | struct S1 { f: dyn Iterator<Item: Copy> }
   |                             ^^^^^^^^^^

error: could not find defining uses
  --> $DIR/inside-adt.rs:8:33
   |
LL | struct S2 { f: Box<dyn Iterator<Item: Copy>> }
   |                                 ^^^^^^^^^^

error: could not find defining uses
  --> $DIR/inside-adt.rs:11:29
   |
LL | struct S3 { f: dyn Iterator<Item: 'static> }
   |                             ^^^^^^^^^^^^^

error: could not find defining uses
  --> $DIR/inside-adt.rs:15:26
   |
LL | enum E1 { V(dyn Iterator<Item: Copy>) }
   |                          ^^^^^^^^^^

error: could not find defining uses
  --> $DIR/inside-adt.rs:18:30
   |
LL | enum E2 { V(Box<dyn Iterator<Item: Copy>>) }
   |                              ^^^^^^^^^^

error: could not find defining uses
  --> $DIR/inside-adt.rs:21:26
   |
LL | enum E3 { V(dyn Iterator<Item: 'static>) }
   |                          ^^^^^^^^^^^^^

error: could not find defining uses
  --> $DIR/inside-adt.rs:25:28
   |
LL | union U1 { f: dyn Iterator<Item: Copy> }
   |                            ^^^^^^^^^^

error: could not find defining uses
  --> $DIR/inside-adt.rs:28:32
   |
LL | union U2 { f: Box<dyn Iterator<Item: Copy>> }
   |                                ^^^^^^^^^^

error: could not find defining uses
  --> $DIR/inside-adt.rs:31:28
   |
LL | union U3 { f: dyn Iterator<Item: 'static> }
   |                            ^^^^^^^^^^^^^

error: aborting due to 18 previous errors

>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)
